Modernize InMemoryJournal
Use local variable type inference, records, immutable collections and
instanceof patterns.

JIRA: CONTROLLER-2137
Change-Id: If43c00295667e2a49f0e79f84ca388173d2094b3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>